@@ -1,6 +1,7 @@
 
 #include <nerv/unit/Testing.mqh>
 #include <nerv/expert/CurrencyTrader.mqh>
+#include <nerv/expert/PortfolioManager.mqh>
 
 BEGIN_TEST_PACKAGE(currencytrader_specs)
 
@@ -480,6 +481,83 @@ BEGIN_TEST_CASE("Should support multiple deals on multiple symbols")
   ASSERT_GT(man.getUtilityDeviation(),0.0);
 END_TEST_CASE()
 
+BEGIN_TEST_CASE("Should send the weight update message on update")
+  nvZMQContext::instance().uninit();
+
+  // can we have multiple pull socket connected ??
+  nvZMQSocket server(ZMQ_PULL);
+  server.bind("tcp://*:22230");
+
+  nvPortfolioManager man("tcp://localhost:22230");
+
+  // First we will receive the portfolio started message.
+  // And we should discard that.
+  char ch[];
+  while(server.receive(ch)==0)
+  {
+    logDEBUG("Waiting for portfolio manager start event...");
+    Sleep(5);
+  }
+
+  // This message should only contain the message type:
+  ASSERT_EQUAL(ArraySize( ch ),2);
+
+
+  // add a currency trader:
+  nvCurrencyTrader* ct = man.addCurrencyTrader("EURUSD");
+
+  {
+    // When the currency trader is added its weight is updated,
+    // Since we have only one trader the weight will be set to 1.0.
+    while(server.receive(ch)==0)
+    {
+      logDEBUG("Waiting for trader weight update event...");
+      Sleep(5);
+    }
+
+    // The message length should be 2 + 4 + 6 + 8:
+    ASSERT_EQUAL(ArraySize( ch ), 20);
+
+    nvBinStream msg(ch);
+
+    ushort mtype;
+    string sym;
+    double val;
+
+    msg>>mtype>>sym>>val;
+    ASSERT_EQUAL(mtype,(ushort)MSGTYPE_TRADER_WEIGHT_UPDATED);
+    ASSERT_EQUAL(sym,"EURUSD");
+    ASSERT_EQUAL(val,1.0);
+  }
+
+  // Manually set the weight for this trader:
+  ct.setWeight(0.5);
+
+  {
+    // When the currency trader is added its weight is updated,
+    // Since we have only one trader the weight will be set to 1.0.
+    while(server.receive(ch)==0)
+    {
+      logDEBUG("Waiting for trader weight update event...");
+      Sleep(5);
+    }
+
+    // The message length should be 2 + 4 + 6 + 8:
+    ASSERT_EQUAL(ArraySize( ch ), 20);
+
+    nvBinStream msg(ch);
+
+    ushort mtype;
+    string sym;
+    double val;
+
+    msg>>mtype>>sym>>val;
+    ASSERT_EQUAL(mtype,(ushort)MSGTYPE_TRADER_WEIGHT_UPDATED);
+    ASSERT_EQUAL(sym,"EURUSD");
+    ASSERT_EQUAL(val,0.5);
+  }
+
+END_TEST_CASE()
 END_TEST_SUITE()
 
 END_TEST_PACKAGE()
