@@ -4,9 +4,10 @@ local Class = createClass{name="Enums",bases={"base.Object"}};
 Class.EVT_TIMER = "timer"
 
 -- List of message type:
-Class.MSGTYPE_UNKNOWN 				  	= 0
-Class.MSGTYPE_BALANCE_UPDATED 		= 1
-Class.MSGTYPE_PORTFOLIO_STARTED 	= 2
+Class.MSGTYPE_UNKNOWN 				  			= 0
+Class.MSGTYPE_BALANCE_UPDATED 				= 1
+Class.MSGTYPE_PORTFOLIO_STARTED 			= 2
+Class.MSGTYPE_TRADER_WEIGHT_UPDATED 	= 3
 
 
 -- Type of market:
